...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPersonsList">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_view"
        android:layout_width="413dp"
        android:layout_height="476dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onMockClicked"
        android:text="Mock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_view" />

    <Button
        android:id="@+id/go_to_sessions_button"
...
        android:text="Favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_view" />

    <Spinner
        android:id="@+id/filter_dropdown"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/favorites_view"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
...
