...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56sp"
    tools:context=".ViewPersonsList">

    <TextView
        android:id="@+id/person_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16sp"
        android:height="24sp"
        android:lineHeight="16sp"
...
